# SymbolicCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/: build.yml
.github/workflows/: build.yml  tests.yml
src/: MWT.cpp  MWT.hpp  approx.cpp  approx.hpp  arithmetic.cpp  arithmetic.hpp  calculator.cpp  calculator.hpp  derivative.cpp  derivative.hpp  expression_node.cpp  expression_node.hpp  expression_tree.cpp  expression_tree.hpp  function_defs.cpp  function_defs.hpp  latex_converter.cpp  latex_converter.hpp  log.cpp  log.hpp  lookup.cpp  lookup.hpp  main.cpp  operation.cpp  operation.hpp  postfix.cpp  postfix.hpp  text_converter.cpp  text_converter.hpp  token.cpp  token.hpp  token_container.cpp  token_container.hpp  token_queue.cpp  token_queue.hpp  token_stack.cpp  token_stack.hpp  token_vector.cpp  token_vector.hpp  tokenizer.cpp  (+5 more)
tests/: derivative_tests.cpp  expression_node_tests.cpp  postfix_tests.cpp  simplification_tests.cpp  test_definitions.cpp  test_definitions.hpp  tokenizer_tests.cpp
